--- a/minions.ipynb
+++ b/minions.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -283,22 +283,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "http://pythonimages.s3.amazonaws.com/myfile\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "k = bucket.new_key(\"myfile\")\n",
     "k.set_contents_from_filename(\"img/1.jpeg\")\n",
@@ -318,17 +310,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "def create_question(number):\n",
-    "#    k = bucket.new_key(number)\n",
-    "#    k.set_contents_from_filename(\"img/{}.jpeg\".format(number))\n",
-    "#    url = k.generate_url(expires_in=0, query_auth=False, force_http=True)\n",
-    "    url = 'http://pythonimages.s3.amazonaws.com/myfile'\n",
+    "    k = bucket.new_key(number)\n",
+    "    k.set_contents_from_filename(\"img/{}.jpeg\".format(number))\n",
+    "    url = k.generate_url(expires_in=0, query_auth=False, force_http=True)\n",
     "\n",
     "    choices = (\n",
     "        (\"An Animal\", 'animal'),\n",
@@ -357,13 +348,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 100,
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": false,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
+   },
+   "source": [
+    "Submitting a hit is easy now:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -410,18 +409,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "mturk_for_real = MTurkConnection(\n",
+    "mturk = MTurkConnection(\n",
     "    aws_access_key_id=access_key,\n",
     "    aws_secret_access_key=secret_key,\n",
-    "    host=MTURK_HOST\n",
-    ")\n",
-    "\n",
+    "    host=MTURK_HOST  # The real thing!\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
     "submitted_hits = {}\n",
     "\n",
     "for image in range(1, 9):\n",
@@ -437,9 +448,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [],
    "source": [
@@ -450,7 +465,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [],
    "source": [
@@ -462,9 +480,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -472,39 +493,48 @@
     "    if hit.HITId in submitted_hits:\n",
     "        image = submitted_hits[hit.HITId]\n",
     "        print(\"Reviewing HIT {} for image {}\")\n",
+    "        \n",
     "        # A hit may have several assignments!\n",
     "        for assignment in mturk.get_assignments(hit.HITId):\n",
+    "            \n",
     "            # An assignment may have several questions.\n",
     "            for answer in assignment.answers[0]:\n",
+    "                \n",
     "                # A question may have several answers (eg. checkboxes)\n",
     "                result[image] = answer.fields[0]\n",
     "\n",
-    "                # Make sure your minions get paid\n",
+    "        # Make sure your minions get paid\n",
     "        mturk.approve_assignment(assignment.AssignmentId)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Thank you.\n",
+    "\n",
+    "![Thank you](thankyou.jpg)\n",
+    "\n",
+    "[github.com/maebert/mturk-tutorial](https://github.com/maebert/mturk-tutorial)"
    ]
   }
  ],
  "metadata": {
-  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 2",
    "language": "python",
